# CMake-Files

./: README.md
Blog/: .gitkeep
Blog/LibraryExampleFirstApproach/: CMakeLists.txt
Blog/LibraryExampleOptionsBuildEvents/: CMakeLists.txt
Blog/LibraryExampleOptionsBuildEvents/lib/math/: CMakeLists.txt  mathLib.h
Blog/LibraryExampleSecondApproachDynamic/: CMakeLists.txt
Blog/LibraryExampleSecondApproachDynamic/lib/math/: CMakeLists.txt
Blog/LibraryExampleSecondApproachDynamic/src/: main.cpp
Blog/LibraryExampleSecondApproachStatic/: CMakeLists.txt
Blog/LibraryExampleSecondApproachStatic/lib/math/: CMakeLists.txt  mathLib.cpp  mathLib.h
Examples/: .gitkeep  SameDirectoryCheck.txt  fizzbuzz.cmake
Examples/CMake_Example01_Minimal/: CMakeLists.txt  helloworld.cpp
